--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.12",
         "nelmio/api-doc-bundle": "^3.0",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/asset": "5.1.*",
@@ -16,6 +17,7 @@
         "symfony/property-access": "5.1.*",
         "symfony/serializer": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
+        "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -67,5 +69,8 @@
             "allow-contrib": false,
             "require": "5.1.*"
         }
+    },
+    "require-dev": {
+        "symfony/phpunit-bridge": "^5.2"
     }
 }
