--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,30 @@
 version: '3'
 services:
-  php:
-    build: docker-compose/php
+  php-fpm:
+    build:
+      context: docker/php-fpm
     volumes:
-      - .:/var/www/symfony
-      - ./docker-compose/php/php.ini:/usr/local/etc/php/php.ini
+      - ./:/var/www/symfony
+    environment:
+      XDEBUG_CONFIG: "remote_host=192.168.221.1 xdebug.start_with_request=yes"
+      PHP_IDE_CONFIG: "serverName=Docker"
+    networks:
+      - internal
   nginx:
-    image: nginx:latest
-    ports:
-      - 8080:80
+    build:
+      context: docker/nginx
     volumes:
-      - .:/var/www/symfony
-      - ./docker-compose/.data/nginx/logs/:/var/log/nginx
-      - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./:/var/www/symfony
+    ports:
+      - "80:80"
     depends_on:
-      - php
+      - php-fpm
+    networks:
+      - internal
+networks:
+  internal:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.221.0/28
