--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.2"
+        "symfony/phpunit-bridge": "^5.2",
+        "symfony/profiler-pack": "^1.0"
     }
 }
