--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "doctrine/annotations": "^1.12",
         "nelmio/api-doc-bundle": "^3.0",
         "sensio/framework-extra-bundle": "^5.6",
+        "symfony-bundles/json-request-bundle": "^4.0",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
