--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^5.2",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/stopwatch": "5.1.*",
+        "symfony/web-profiler-bundle": "5.1.*"
     }
 }
