--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,13 @@
 .env
 /.idea
 /public/bundles
+
 ###> symfony/phpunit-bridge ###
-.phpunit
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
