--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,10 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.2",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.1.*",
+        "symfony/css-selector": "5.1.*",
+        "symfony/phpunit-bridge": "^5.3",
         "symfony/stopwatch": "5.1.*",
         "symfony/web-profiler-bundle": "5.1.*"
     }
