--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-# Unit-тестирование: ./vendor/bin/simple-phpunit
+# Unit-тестирование: php bin/phpunit
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
