--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -2,7 +2,8 @@ FROM php:8.0.3-fpm
 
 RUN apt-get update && apt-get install -y wget git unzip \
     && pecl install xdebug \
-    && docker-php-ext-enable xdebug
+    && docker-php-ext-enable xdebug \
+    && apt-get install -y bash
 
 ADD ./php.ini /usr/local/etc/php/php.ini
 
