--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.21",
+        "symfony/monolog-bundle": "^3.7",
         "symfony/property-access": "5.1.*",
         "symfony/serializer": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
