--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -1,2 +1,8 @@
 monolog:
-  channels: [structures]
+  channels: [structures, main]
+  handlers:
+    main:
+      type: stream
+      path: '%kernel.logs_dir%/%kernel.environment%.log'
+      level: debug
+      channels: ['!event', '!request']
