--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
             "*": "dist"
         },
         "sort-packages": true,
-        "disable-tls": false
+        "disable-tls": false,
+        "allow-plugins": {
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
