--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -3,7 +3,9 @@ FROM php:8.0.3-fpm
 RUN apt-get update && apt-get install -y wget git unzip \
     && pecl install xdebug \
     && docker-php-ext-enable xdebug \
-    && apt-get install -y bash
+    && apt-get install -y bash \
+    && mkdir -p /var/www/symfony/var/cache /var/www/symfony/var/log \
+    && chmod 777 -R /var/www/symfony/var
 
 ADD ./php.ini /usr/local/etc/php/php.ini
 
